--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Deployment Test
+name: CI
 
 on:
   push:
@@ -620,10 +620,33 @@ jobs:
           rm -rf /tmp/config-test-mount || true
           rm -rf /tmp/config-test-mount-writable || true
 
+  publish-charm:
+    name: Publish Charm to Edge
+    needs: [test-all-mode, test-auto-mode, test-web-worker-mode]
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download charm artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: concourse-ci-machine-charm
+
+      - name: Install Charmcraft
+        run: sudo snap install charmcraft --classic
+
+      - name: Upload charm to Charmhub
+        env:
+          CHARMCRAFT_AUTH: ${{ secrets.CHARMHUB_TOKEN }}
+        run: |
+          charmcraft upload ./concourse-ci-machine_amd64.charm --release edge
+
   cleanup-artifacts:
     name: Cleanup artifacts
     runs-on: ubuntu-latest
-    needs: [test-all-mode, test-auto-mode, test-web-worker-mode]
+    needs: [test-all-mode, test-auto-mode, test-web-worker-mode, publish-charm]
     if: always()
     steps:
       - name: Delete charm artifact
