ci: prevent artifact cleanup on test failure
Updated the cleanup-artifacts job in .github/workflows/ci.yml to only run
if all preceding jobs succeeded or were skipped. This ensures that artifacts
are preserved for debugging if any test mode fails.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -647,7 +647,7 @@ jobs:
     name: Cleanup artifacts
     runs-on: ubuntu-latest
     needs: [test-all-mode, test-auto-mode, test-web-worker-mode, publish-charm]
-    if: always()
+    if: always() && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled')
     steps:
       - name: Delete charm artifact
         run: |
