feat: Add LXC testing support for shared storage feature
Add LXC-based testing capability for shared storage feature validation
without requiring full Juju shared filesystem storage setup.

Key Changes:
-----------

1. Config-Based Storage Mode (config.yaml):
   - Add 'shared-storage' config option with values: 'none' (default), 'lxc'
   - Enables testing mode without modifying core storage logic
   - Backward compatible with existing deployments

2. Marker File Detection:
   - Units wait up to 5 minutes for .lxc_shared_storage marker file
   - Marker indicates LXC mount is ready at /var/lib/concourse
   - Timeout with graceful fallback to local installation

3. Storage Path Selection:
   - LXC mode: Always use /var/lib/concourse (fixed path)
   - None mode: Disable shared storage (backward compatibility)
   - Updated web and worker initialize_shared_storage() methods

4. Simplified Storage Requirements:
   - Comment out concourse-data Juju storage in metadata.yaml
   - Binaries are ephemeral and can be re-downloaded if needed
   - Eliminates per-unit storage instance issues

5. LXC Mount Configuration (lib/storage_coordinator.py):
   - Add is_lxc_shared_storage() method for mode detection
   - Add lxc_shared_marker_path property for marker location
   - Supports readonly=false (web) and readonly=true (worker) mounts
   - Requires shift=true for proper UID/GID mapping

Implementation Details:
----------------------

Modified Files:
- config.yaml: Added shared-storage option
- metadata.yaml: Commented out concourse-data storage definition
- lib/storage_coordinator.py: Added LXC detection methods
- lib/concourse_installer.py: Added marker wait logic with timeout
- lib/concourse_web.py: Updated path selection for LXC mode
- lib/concourse_worker.py: Updated path selection for LXC mode

New Documentation:
- specs/001-shared-storage/LXC_SHARED_STORAGE_TEST.md:
  Comprehensive 11KB testing guide with step-by-step procedures
  for LXC mount setup, marker creation, and verif

--- a/config.yaml
+++ b/config.yaml
@@ -17,6 +17,16 @@ options:
     default: ""
     type: string
   
+  shared-storage:
+    description: |
+      Shared storage mode for LXC testing:
+      - 'none': Disable shared storage, each unit downloads independently (default)
+      - 'lxc': Enable LXC-mounted shared storage (requires .lxc_shared_storage marker)
+      When set to 'lxc', units will wait for the marker file before proceeding.
+      Default: none
+    default: "none"
+    type: string
+  
   web-port:
     description: |
       Port for Concourse web UI and API server.
