--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -754,9 +754,212 @@ jobs:
           yes concourse-shared | juju destroy-model concourse-shared --destroy-storage --force --no-wait || true
           sudo rm -rf /home/ubuntu/concourse-shared || true
 
+
+  test-shared-storage-web-worker:
+    name: Test shared storage (mode=web+worker)
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    needs: test-shared-storage-auto
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download charm artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: concourse-ci-machine-charm
+
+      - name: Setup LXD
+        uses: canonical/setup-lxd@v1
+        with:
+          channel: 5.21/stable
+
+      - name: Configure LXD IPv6
+        run: |
+          lxc network set lxdbr0 ipv6.address none
+          lxc network set lxdbr0 ipv6.dhcp false
+          lxc network set lxdbr0 ipv6.nat false
+
+      - name: Install Juju
+        run: |
+          sudo snap install juju --channel 3.6/stable
+          sudo snap install juju-wait --classic
+
+      - name: Bootstrap Juju
+        run: juju bootstrap localhost test-controller --config test-mode=true
+
+      - name: Add Juju Model
+        run: juju add-model concourse-ss-ww
+
+      - name: Deploy separate Web and Worker with Shared Storage
+        run: |
+          # Deploy web unit
+          juju deploy ./concourse-ci-machine_amd64.charm concourse-web \
+            --config mode=web \
+            --config version=7.14.2 \
+            --config shared-storage=lxc
+            
+          # Deploy worker unit
+          juju deploy ./concourse-ci-machine_amd64.charm concourse-worker \
+            --config mode=worker \
+            --config version=7.14.2 \
+            --config shared-storage=lxc
+
+          juju deploy postgresql --channel 16/stable
+          juju relate concourse-web:postgresql postgresql:database
+          juju relate concourse-web:web-tsa concourse-worker:worker-tsa
+          
+          # Wait for units to be created
+          sleep 15
+          juju status
+
+      - name: Setup Shared Storage (Manual LXD Mount)
+        run: |
+          # Create shared dir on host
+          mkdir -p /home/ubuntu/concourse-shared-ww
+          chmod 777 /home/ubuntu/concourse-shared-ww
+          
+          # Get machines and containers
+          WEB_MACHINE=$(juju status concourse-web/0 --format=json | jq -r '.applications."concourse-web".units["concourse-web/0"].machine')
+          WEB_CONTAINER=$(lxc list --format=csv -c n | grep "^juju-.*-${WEB_MACHINE}$" | head -1)
+          
+          WORKER_MACHINE=$(juju status concourse-worker/0 --format=json | jq -r '.applications."concourse-worker".units["concourse-worker/0"].machine')
+          WORKER_CONTAINER=$(lxc list --format=csv -c n | grep "^juju-.*-${WORKER_MACHINE}$" | head -1)
+          
+          # Mount to Web unit
+          echo "Mounting shared storage to Web ($WEB_CONTAINER)"
+          lxc config device add $WEB_CONTAINER concourse_shared disk source=/home/ubuntu/concourse-shared-ww path=/var/lib/concourse shift=true
+          
+          # Mount to Worker unit
+          echo "Mounting shared storage to Worker ($WORKER_CONTAINER)"
+          lxc config device add $WORKER_CONTAINER concourse_shared disk source=/home/ubuntu/concourse-shared-ww path=/var/lib/concourse shift=true
+          
+          # Wait for deployment to settle
+          juju-wait -m concourse-ss-ww -t 900
+          
+          # Verify binaries downloaded by web
+          ls -lh /home/ubuntu/concourse-shared-ww/bin/concourse
+
+      - name: Verify Deployment
+        run: |
+          # Check web status
+          juju status concourse-web/0
+          
+          # Check worker status
+          juju status concourse-worker/0
+          
+          # Check logs for worker reuse
+          juju debug-log --replay --include concourse-worker/0 | grep "Binaries .* already installed" || true
+
+      - name: Cleanup
+        if: always()
+        run: |
+          yes concourse-ss-ww | juju destroy-model concourse-ss-ww --destroy-storage --force --no-wait || true
+          sudo rm -rf /home/ubuntu/concourse-shared-ww || true
+
+  test-shared-storage-all:
+    name: Test shared storage (mode=all)
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    needs: test-shared-storage-web-worker
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download charm artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: concourse-ci-machine-charm
+
+      - name: Setup LXD
+        uses: canonical/setup-lxd@v1
+        with:
+          channel: 5.21/stable
+
+      - name: Configure LXD IPv6
+        run: |
+          lxc network set lxdbr0 ipv6.address none
+          lxc network set lxdbr0 ipv6.dhcp false
+          lxc network set lxdbr0 ipv6.nat false
+
+      - name: Install Juju
+        run: |
+          sudo snap install juju --channel 3.6/stable
+          sudo snap install juju-wait --classic
+
+      - name: Bootstrap Juju
+        run: juju bootstrap localhost test-controller --config test-mode=true
+
+      - name: Add Juju Model
+        run: juju add-model concourse-ss-all
+
+      - name: Deploy with Shared Storage (mode=all)
+        run: |
+          juju deploy ./concourse-ci-machine_amd64.charm concourse-ci \
+            --config mode=all \
+            --config version=7.14.2 \
+            --config shared-storage=lxc
+            
+          juju deploy postgresql --channel 16/stable
+          juju relate concourse-ci:postgresql postgresql:database
+          
+          # Wait for unit 0
+          sleep 15
+          juju status
+
+      - name: Setup Shared Storage (Manual LXD Mount)
+        run: |
+          # Create shared dir on host
+          mkdir -p /home/ubuntu/concourse-shared-all
+          chmod 777 /home/ubuntu/concourse-shared-all
+          
+          # Get unit 0
+          MACHINE=$(juju status concourse-ci/0 --format=json | jq -r '.applications."concourse-ci".units["concourse-ci/0"].machine')
+          CONTAINER=$(lxc list --format=csv -c n | grep "^juju-.*-${MACHINE}$" | head -1)
+          
+          # Mount to unit 0
+          echo "Mounting shared storage to $CONTAINER"
+          lxc config device add $CONTAINER concourse_shared disk source=/home/ubuntu/concourse-shared-all path=/var/lib/concourse shift=true
+          
+          # Wait for installation
+          juju-wait -m concourse-ss-all -t 900
+          
+          # Verify binaries
+          ls -lh /home/ubuntu/concourse-shared-all/bin/concourse
+
+      - name: Add Unit with Shared Storage
+        run: |
+          juju add-unit concourse-ci
+          
+          # Wait for unit 1
+          sleep 30
+          
+          MACHINE=$(juju status concourse-ci/1 --format=json | jq -r '.applications."concourse-ci".units["concourse-ci/1"].machine')
+          CONTAINER=$(lxc list --format=csv -c n | grep "^juju-.*-${MACHINE}$" | head -1)
+          
+          # Mount to unit 1
+          echo "Mounting shared storage to $CONTAINER"
+          lxc config device add $CONTAINER concourse_shared disk source=/home/ubuntu/concourse-shared-all path=/var/lib/concourse shift=true
+          
+          # Wait for join
+          juju-wait -m concourse-ss-all -t 900
+          
+          # Verify unit 1 is active
+          juju status concourse-ci/1
+
+      - name: Verify Shared Storage Usage
+        run: |
+          # Check if unit 1 reused binaries
+          juju debug-log --replay --include concourse-ci/1 | grep "Binaries .* already installed" || true
+
+      - name: Cleanup
+        if: always()
+        run: |
+          yes concourse-ss-all | juju destroy-model concourse-ss-all --destroy-storage --force --no-wait || true
+          sudo rm -rf /home/ubuntu/concourse-shared-all || true
   publish-charm:
     name: Publish Charm to Edge
-    needs: [test-all-mode, test-auto-mode, test-web-worker-mode, test-shared-storage-auto]
+    needs: [test-all-mode, test-auto-mode, test-web-worker-mode, test-shared-storage-auto, test-shared-storage-web-worker, test-shared-storage-all]
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
@@ -780,7 +983,7 @@ jobs:
   cleanup-artifacts:
     name: Cleanup artifacts
     runs-on: ubuntu-latest
-    needs: [test-all-mode, test-auto-mode, test-web-worker-mode, test-shared-storage-auto, publish-charm]
+    needs: [test-all-mode, test-auto-mode, test-web-worker-mode, test-shared-storage-auto, test-shared-storage-web-worker, test-shared-storage-all, publish-charm]
     if: always() && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled')
     steps:
       - name: Delete charm artifact
