--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -693,18 +693,18 @@ jobs:
           CONTAINER=$(lxc list --format=csv -c n | grep "^juju-.*-${MACHINE}$" | head -1)
           
           # Create shared dir on host
-          mkdir -p /home/ubuntu/concourse-shared
-          chmod 777 /home/ubuntu/concourse-shared
+          mkdir -p $(pwd)/concourse-shared
+          chmod 777 $(pwd)/concourse-shared
           
           # Mount to unit 0
           echo "Mounting shared storage to $CONTAINER"
-          lxc config device add $CONTAINER concourse_shared disk source=/home/ubuntu/concourse-shared path=/var/lib/concourse shift=true
+          lxc config device add $CONTAINER concourse_shared disk source=$(pwd)/concourse-shared path=/var/lib/concourse shift=true
           
           # Wait for deployment to settle (unit 0 should install and download binaries)
           juju-wait -m concourse-shared -t 900
           
           # Verify binaries downloaded
-          ls -lh /home/ubuntu/concourse-shared/bin/concourse
+          ls -lh $(pwd)/concourse-shared/bin/concourse
           
       - name: Add Unit with Shared Storage
         run: |
@@ -719,7 +719,7 @@ jobs:
           
           # Mount SAME shared storage to unit 1
           echo "Mounting shared storage to $CONTAINER"
-          lxc config device add $CONTAINER concourse_shared disk source=/home/ubuntu/concourse-shared path=/var/lib/concourse shift=true
+          lxc config device add $CONTAINER concourse_shared disk source=$(pwd)/concourse-shared path=/var/lib/concourse shift=true
           
           # Wait for unit to join
           juju-wait -m concourse-shared -t 900
@@ -756,7 +756,7 @@ jobs:
           
           # Verify upgrade
           juju status concourse-ci
-          cat /home/ubuntu/concourse-shared/.installed_version | grep "$UPGRADE_VERSION"
+          cat $(pwd)/concourse-shared/.installed_version | grep "$UPGRADE_VERSION"
           
           # Verify locking occurred (T086 concurrent test coverage)
           # One unit should have acquired lock, others waited
@@ -767,7 +767,7 @@ jobs:
         if: always()
         run: |
           yes concourse-shared | juju destroy-model concourse-shared --destroy-storage --force --no-wait || true
-          sudo rm -rf /home/ubuntu/concourse-shared || true
+          sudo rm -rf $(pwd)/concourse-shared || true
 
 
   test-shared-storage-web-worker:
@@ -831,8 +831,8 @@ jobs:
       - name: Setup Shared Storage (Manual LXD Mount)
         run: |
           # Create shared dir on host
-          mkdir -p /home/ubuntu/concourse-shared-ww
-          chmod 777 /home/ubuntu/concourse-shared-ww
+          mkdir -p $(pwd)/concourse-shared-ww
+          chmod 777 $(pwd)/concourse-shared-ww
           
           # Get machines and containers
           WEB_MACHINE=$(juju status concourse-web/0 --format=json | jq -r '.applications."concourse-web".units["concourse-web/0"].machine')
@@ -843,17 +843,17 @@ jobs:
           
           # Mount to Web unit
           echo "Mounting shared storage to Web ($WEB_CONTAINER)"
-          lxc config device add $WEB_CONTAINER concourse_shared disk source=/home/ubuntu/concourse-shared-ww path=/var/lib/concourse shift=true
+          lxc config device add $WEB_CONTAINER concourse_shared disk source=$(pwd)/concourse-shared-ww path=/var/lib/concourse shift=true
           
           # Mount to Worker unit
           echo "Mounting shared storage to Worker ($WORKER_CONTAINER)"
-          lxc config device add $WORKER_CONTAINER concourse_shared disk source=/home/ubuntu/concourse-shared-ww path=/var/lib/concourse shift=true
+          lxc config device add $WORKER_CONTAINER concourse_shared disk source=$(pwd)/concourse-shared-ww path=/var/lib/concourse shift=true
           
           # Wait for deployment to settle
           juju-wait -m concourse-ss-ww -t 900
           
           # Verify binaries downloaded by web
-          ls -lh /home/ubuntu/concourse-shared-ww/bin/concourse
+          ls -lh $(pwd)/concourse-shared-ww/bin/concourse
 
       - name: Verify Deployment
         run: |
@@ -870,7 +870,7 @@ jobs:
         if: always()
         run: |
           yes concourse-ss-ww | juju destroy-model concourse-ss-ww --destroy-storage --force --no-wait || true
-          sudo rm -rf /home/ubuntu/concourse-shared-ww || true
+          sudo rm -rf $(pwd)/concourse-shared-ww || true
 
   test-shared-storage-all:
     name: Test shared storage (mode=all)
@@ -925,8 +925,8 @@ jobs:
       - name: Setup Shared Storage (Manual LXD Mount)
         run: |
           # Create shared dir on host
-          mkdir -p /home/ubuntu/concourse-shared-all
-          chmod 777 /home/ubuntu/concourse-shared-all
+          mkdir -p $(pwd)/concourse-shared-all
+          chmod 777 $(pwd)/concourse-shared-all
           
           # Get unit 0
           MACHINE=$(juju status concourse-ci/0 --format=json | jq -r '.applications."concourse-ci".units["concourse-ci/0"].machine')
@@ -934,13 +934,13 @@ jobs:
           
           # Mount to unit 0
           echo "Mounting shared storage to $CONTAINER"
-          lxc config device add $CONTAINER concourse_shared disk source=/home/ubuntu/concourse-shared-all path=/var/lib/concourse shift=true
+          lxc config device add $CONTAINER concourse_shared disk source=$(pwd)/concourse-shared-all path=/var/lib/concourse shift=true
           
           # Wait for installation
           juju-wait -m concourse-ss-all -t 900
           
           # Verify binaries
-          ls -lh /home/ubuntu/concourse-shared-all/bin/concourse
+          ls -lh $(pwd)/concourse-shared-all/bin/concourse
 
       - name: Add Unit with Shared Storage
         run: |
@@ -954,7 +954,7 @@ jobs:
           
           # Mount to unit 1
           echo "Mounting shared storage to $CONTAINER"
-          lxc config device add $CONTAINER concourse_shared disk source=/home/ubuntu/concourse-shared-all path=/var/lib/concourse shift=true
+          lxc config device add $CONTAINER concourse_shared disk source=$(pwd)/concourse-shared-all path=/var/lib/concourse shift=true
           
           # Wait for join
           juju-wait -m concourse-ss-all -t 900
@@ -971,7 +971,7 @@ jobs:
         if: always()
         run: |
           yes concourse-ss-all | juju destroy-model concourse-ss-all --destroy-storage --force --no-wait || true
-          sudo rm -rf /home/ubuntu/concourse-shared-all || true
+          sudo rm -rf $(pwd)/concourse-shared-all || true
   publish-charm:
     name: Publish Charm to Edge
     needs: [test-all-mode, test-auto-mode, test-web-worker-mode, test-shared-storage-auto, test-shared-storage-web-worker, test-shared-storage-all]
