ci: revert docker image to busybox
Switch the image used in Concourse tasks from `ghcr.io/linuxcontainers/alpine` back to `busybox`.
This affects the `test-auto-mode` and `test-mode-all` jobs.
This restores the previous behavior to ensure compatibility with the test environment.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,7 +132,7 @@ jobs:
           image_resource:
             type: registry-image
             source:
-              repository: ghcr.io/linuxcontainers/alpine
+              repository: busybox
           run:
             path: echo
             args: ["Hello from mode=auto!"]
@@ -343,7 +343,7 @@ jobs:
           image_resource:
             type: registry-image
             source:
-              repository: ghcr.io/linuxcontainers/alpine
+              repository: busybox
           run:
             path: sh
             args:
@@ -558,7 +558,7 @@ jobs:
           image_resource:
             type: registry-image
             source:
-              repository: ghcr.io/linuxcontainers/alpine
+              repository: busybox
           run:
             path: echo
             args: ["Hello from mode=all!"]
