Refactor: Remove deprecated 'mode=all' (Monolith) from CI and Docs
- .github/workflows/ci.yml: Removed 'test-all-mode' and 'test-shared-storage-all' jobs.
- AGENTS.md, README.md, docs/*: Removed references to 'mode=all' deployment mode.
- docs/test-matrix.md: Removed 'mode=all' columns from the test matrix.
- Replaced 'mode=all' recommendations with 'mode=auto' (which supports single-unit deployments seamlessly).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -553,155 +553,6 @@ jobs:
           rm -rf /tmp/config-test-mount || true
           rm -rf /tmp/config-test-mount-writable || true
 
-  test-all-mode:
-    name: Test mode=all
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    needs: test-web-worker-mode
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Download charm artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: concourse-ci-machine-charm
-
-      - name: Setup LXD
-        uses: canonical/setup-lxd@v1
-        with:
-          channel: 5.21/stable
-
-      - name: Configure LXD IPv6
-        run: |
-          lxc network set lxdbr0 ipv6.address none
-          lxc network set lxdbr0 ipv6.dhcp false
-          lxc network set lxdbr0 ipv6.nat false
-
-      - name: Install Juju
-        run: |
-          sudo snap install juju --channel 3.6/stable
-          sudo snap install juju-wait --classic
-
-      - name: Bootstrap Juju
-        run: juju bootstrap localhost test-controller --config test-mode=true
-
-      - name: Add Juju Model
-        run: juju add-model concourse-all
-
-      - name: Deploy charms
-        run: |
-          juju deploy ./concourse-ci-machine_amd64.charm concourse-ci --config mode=all --config version=7.14.2
-          juju deploy postgresql --channel 16/stable
-
-      - name: Remove charm file
-        run: rm concourse-ci-machine_amd64.charm
-
-      - name: Relate charms
-        run: juju relate concourse-ci:postgresql postgresql:database
-
-      - name: Wait for model to settle
-        run: juju-wait -m concourse-all -t 900
-
-      - name: Juju Status
-        run: juju status
-
-      - name: Verify deployment
-        run: |
-          echo "=== Checking unit (should run both server and worker) ==="
-          juju exec --unit concourse-ci/leader -- systemctl status concourse-server || echo "Server not running (unexpected)"
-          juju exec --unit concourse-ci/leader -- systemctl status concourse-worker || echo "Worker not running (unexpected)"
-
-      - name: Get admin password
-        run: |
-          juju run concourse-ci/leader get-admin-password | grep "password:" | awk '{print $2}' > admin-password.txt
-          cat admin-password.txt
-
-      - name: Get Concourse IP
-        run: |
-          juju status --format=json | jq -r '.applications."concourse-ci".units | to_entries[] | select(.value."leader" == true) | .value."public-address"' > concourse-ip.txt
-          cat concourse-ip.txt
-
-      - name: Install fly CLI
-        run: |
-          CONCOURSE_IP=$(cat concourse-ip.txt)
-          curl -Lo fly "http://${CONCOURSE_IP}:8080/api/v1/cli?arch=amd64&platform=linux"
-          chmod +x ./fly
-          sudo mv ./fly /usr/local/bin/
-
-      - name: Create test task
-        run: |
-          cat <<EOF > task.yml
-          platform: linux
-          image_resource:
-            type: registry-image
-            source:
-              repository: busybox
-          run:
-            path: echo
-            args: ["Hello from mode=all!"]
-          EOF
-
-      - name: Execute test task
-        run: |
-          export CONCOURSE_URL=$(cat concourse-ip.txt)
-          export CONCOURSE_PASSWORD=$(cat admin-password.txt)
-          fly -t ci login -c http://$CONCOURSE_URL:8080 -u admin -p "$CONCOURSE_PASSWORD"
-          fly -t ci execute -c task.yml
-
-      - name: Verify workers are registered
-        run: |
-          export CONCOURSE_URL=$(cat concourse-ip.txt)
-          export CONCOURSE_PASSWORD=$(cat admin-password.txt)
-          fly -t ci login -c http://$CONCOURSE_URL:8080 -u admin -p "$CONCOURSE_PASSWORD"
-          fly -t ci workers
-          WORKER_COUNT=$(fly -t ci workers | grep -c "running" || true)
-          echo "Registered workers: $WORKER_COUNT"
-          if [ "$WORKER_COUNT" -lt 1 ]; then
-            echo "Expected at least 1 worker, found $WORKER_COUNT"
-            exit 1
-          fi
-
-      - name: Test version upgrade (7.14.2 → 7.14.3)
-        run: |
-          echo "=== Current version ==="
-          juju status concourse-ci --format=json | jq -r '.applications."concourse-ci".units | to_entries[].value."workload-status".message'
-          
-          UPGRADE_VERSION="7.14.3"
-          echo "Upgrade version: $UPGRADE_VERSION"
-          
-          echo "=== Setting version configuration for persistence ==="
-          juju config concourse-ci version=$UPGRADE_VERSION
-          
-          echo "=== Upgrading to $UPGRADE_VERSION ==="
-          juju run concourse-ci/leader upgrade version=$UPGRADE_VERSION
-          
-          echo "=== Waiting for upgrade to complete ==="
-          sleep 30
-          juju-wait -m concourse-all -t 600
-          
-          echo "=== Verifying upgraded version ==="
-          juju status concourse-ci --format=json | jq -r '.applications."concourse-ci".units | to_entries[].value."workload-status".message'
-          
-          # Verify version in status message
-          VERSION_CHECK=$(juju status concourse-ci --format=json | jq -r '.applications."concourse-ci".units | to_entries[].value."workload-status".message' | grep -c "v$UPGRADE_VERSION" || true)
-          if [ "$VERSION_CHECK" -lt 1 ]; then
-            echo "Upgrade verification failed: version not updated to $UPGRADE_VERSION"
-            exit 1
-          fi
-          echo "✅ Upgrade to $UPGRADE_VERSION successful"
-
-      - name: Verify upgraded deployment still works
-        run: |
-          export CONCOURSE_URL=$(cat concourse-ip.txt)
-          export CONCOURSE_PASSWORD=$(cat admin-password.txt)
-          fly -t ci login -c http://$CONCOURSE_URL:8080 -u admin -p "$CONCOURSE_PASSWORD"
-          fly -t ci execute -c task.yml
-
-      - name: Cleanup
-        if: always()
-        run: |
-          yes concourse-all | juju destroy-model concourse-all --destroy-storage --force --no-wait || true
 
   test-shared-storage-auto:
     name: Test shared storage (mode=auto)
@@ -1065,96 +916,9 @@ jobs:
           yes concourse-ss-ww | juju destroy-model concourse-ss-ww --destroy-storage --force --no-wait || true
           sudo rm -rf $(pwd)/concourse-shared-ww || true
 
-  test-shared-storage-all:
-    name: Test shared storage (mode=all)
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    needs: test-shared-storage-web-worker
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Download charm artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: concourse-ci-machine-charm
-
-      - name: Setup LXD
-        uses: canonical/setup-lxd@v1
-        with:
-          channel: 5.21/stable
-
-      - name: Configure LXD IPv6
-        run: |
-          lxc network set lxdbr0 ipv6.address none
-          lxc network set lxdbr0 ipv6.dhcp false
-          lxc network set lxdbr0 ipv6.nat false
-
-      - name: Install Juju
-        run: |
-          sudo snap install juju --channel 3.6/stable
-          sudo snap install juju-wait --classic
-
-      - name: Bootstrap Juju
-        run: juju bootstrap localhost test-controller --config test-mode=true
-
-      - name: Add Juju Model
-        run: juju add-model concourse-ss-all
-
-      - name: Deploy with Shared Storage (mode=all)
-        run: |
-          juju deploy ./concourse-ci-machine_amd64.charm concourse-ci \
-            --config mode=all \
-            --config version=7.14.2 \
-            --config shared-storage=lxc
-            
-          juju deploy postgresql --channel 16/stable
-          juju relate concourse-ci:postgresql postgresql:database
-          
-          # Wait for installation
-          juju-wait -m concourse-ss-all -t 900
-          
-          # Setup shared storage using the script
-          ./scripts/setup-shared-storage.sh concourse-ci $(pwd)/concourse-shared-all
-
-          # Wait for storage integration
-          sleep 15
-          juju-wait -m concourse-ss-all -t 900
-          
-          # Verify binaries
-          echo "Verifying binaries in shared storage..."
-          ls -lh $(pwd)/concourse-shared-all/bin/concourse
-
-      - name: Add Unit with Shared Storage
-        run: |
-          juju add-unit concourse-ci
-          
-          # Wait for join
-          juju-wait -m concourse-ss-all -t 900
-          
-          # Setup shared storage for the new unit
-          ./scripts/setup-shared-storage.sh concourse-ci $(pwd)/concourse-shared-all
-
-          # Wait for storage integration on new unit
-          sleep 15
-          juju-wait -m concourse-ss-all -t 900
-          
-          # Verify unit 1 is active
-          juju status concourse-ci/1
-
-      - name: Verify Shared Storage Usage
-        run: |
-          # Check if unit 1 reused binaries
-          juju debug-log --replay --include concourse-ci/1 | grep "Binaries .* already installed" || true
-
-      - name: Cleanup
-        if: always()
-        run: |
-          yes concourse-ss-all | juju destroy-model concourse-ss-all --destroy-storage --force --no-wait || true
-          sudo rm -rf $(pwd)/concourse-shared-all || true
   publish-charm:
     name: Publish Charm to Edge
-    needs: [test-all-mode, test-auto-mode, test-web-worker-mode, test-shared-storage-auto, test-shared-storage-web-worker, test-shared-storage-all]
+    needs: [test-auto-mode, test-web-worker-mode, test-shared-storage-auto, test-shared-storage-web-worker]
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
@@ -1178,7 +942,7 @@ jobs:
   cleanup-artifacts:
     name: Cleanup artifacts
     runs-on: ubuntu-latest
-    needs: [test-all-mode, test-auto-mode, test-web-worker-mode, test-shared-storage-auto, test-shared-storage-web-worker, test-shared-storage-all, publish-charm]
+    needs: [test-auto-mode, test-web-worker-mode, test-shared-storage-auto, test-shared-storage-web-worker, publish-charm]
     if: always() && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled')
     steps:
       - name: Delete charm artifact
