--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -287,7 +287,7 @@ jobs:
           yes concourse-auto | juju destroy-model concourse-auto --destroy-storage --force --no-wait || true
 
   test-web-worker-mode:
-    name: Test mode=web+worker (with mounts)
+    name: Test mode=web+worker
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: test-auto-mode
